Add visual blocking indicator for LITIENGINE deco placement and apply DrawComponent tintColor in LITIENGINE sprite renderer